<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home_title_text"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/menu_favorites_title"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/ic_baseline_auto_delete_24"
        android:title="@string/menu_watch_later_title"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/selections"
        android:icon="@drawable/ic_baseline_collections_bookmark_24"
        android:title="@string/menu_selections_title"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/menu_settings_title_text"
        app:showAsAction="withText"/>
</menu>