...
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fitsSystemWindows="false"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
...
                tools:text="@tools:sample/lorem/random" />

        </androidx.core.widget.NestedScrollView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/details_fab_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:borderWidth="0dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_anchor="@id/app_bar"
...
